# hybrid-graph-rag-chunker

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/hybrid_graph_rag_chunker/: __init__.py  ai_client.py  chunk_builder.py  chunk_strategy.py  constants.py  fixed_size_chunker.py  markdown_parser.py  models.py  semantic_chunker.py  tail_call.py
src/solr/: __init__.py  client.py  schema.json
tests/: test_chunking.py
