[project]
name = "hybrid-graph-rag-chunker"
version = "0.1.0"
description = "Hierarchical + semantic Markdown chunker producing nodes for a Hybrid Hierarchical + Graph-Augmented RAG Solr schema"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
